fixed navbar toggler not showing

--- a/src/App.scss
+++ b/src/App.scss
@@ -144,7 +144,7 @@ button {
     }
 
     &.f-top {
-      z-index: 996;
+      z-index: 998;
       height: 8.2vh;
 
       > div {
